Fix link overflow

--- a/src/components/Link/styles.module.css
+++ b/src/components/Link/styles.module.css
@@ -5,7 +5,10 @@
     align-items: flex-start;
     flex-wrap: nowrap;
     width: fit-content;
-    overflow: auto;
+
+    &.ellipsized {
+        overflow: auto;
+    }
 
     &.dropdown-item {
         width: 100%;
